SQL QUERY WINDOW

--- a/templates/manager.html
+++ b/templates/manager.html
@@ -14,6 +14,7 @@
                 <li><a href="/profile_emp?user={{user_data}}">Profile</a></li>
                 <li><a href="/employees_managed?user={{user_data}}">Employees Managed</a></li>
                 <li><a href="/dept_details?user={{user_data}}">Dept Details</a></li>
+                <li><a href="/sql_command">SQL Prompter</a> </li>
             </ul>
         </div>
         <!-- Content area -->
