--- a/templates/employee.html
+++ b/templates/employee.html
@@ -14,7 +14,8 @@
                 <li><a href="/profile_emp?user={{user_data}}">Profile</a></li>
                 <li><a href="/users_managed?user={{user_data}}">Users Managed</a></li>
                 <li><a href="/dept_details?user={{user_data}}">Dept Details</a></li>
-                <li><a href="/projects_managed?user_data={{user_data}}">Projects Managed</a></li>  <!-- Added link for projects -->
+                <li><a href="/projects_managed?user_data={{user_data}}">Projects Managed</a></li>
+                <li><a href="/add_project?user_data={{user_data}}">Add Project</a></li><!-- Added link for projects -->
             </ul>
         </div>
         <!-- Content area -->
@@ -22,5 +23,6 @@
             <!-- Content for the employee page -->
         </div>
     </div>
+
 </body>
 </html>
