--- a/templates/login.html
+++ b/templates/login.html
@@ -22,5 +22,11 @@
         </form>
         <p>New user? <a href="/signup">Sign up here</a></p>
     </div>
+    <button type="button" onclick="goBack()">Go Back</button>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
