--- a/templates/profile_emp.html
+++ b/templates/profile_emp.html
@@ -17,5 +17,11 @@
         <p>Skills: {{user_data[7]}}</p>
         <p>Position: {{user_data[6]}}</p>
     </div>
+    <button type="button" onclick="goBack()">Go Back</button>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
