--- a/templates/signup.html
+++ b/templates/signup.html
@@ -21,5 +21,11 @@
             <button type="submit">Sign Up</button>
         </form>
     </div>
+    <button type="button" onclick="goBack()">Go Back</button>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
