--- a/templates/add_employee.html
+++ b/templates/add_employee.html
@@ -51,6 +51,18 @@
         button[type="submit"]:hover {
             background-color: #45a049;
         }
+        button[type="button"] {
+            background-color: #ccc;
+            color: black;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+        button[type="button"]:hover {
+            background-color: #ddd;
+        }
     </style>
 </head>
 <body>
@@ -101,7 +113,15 @@
         </select>
 
         <button type="submit">Add Employee</button>
+        <button type="button" onclick="goBack()">Go Back</button>
+
     </form>
+
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
 
