--- a/templates/dept_details.html
+++ b/templates/dept_details.html
@@ -42,5 +42,11 @@
         </tr>
         {% endfor %}
     </table>
+    <button type="button" onclick="goBack()">Go Back</button>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
