--- a/templates/projects_managed.html
+++ b/templates/projects_managed.html
@@ -42,6 +42,12 @@
             {% endfor %}
         </tbody>
     </table>
+    <button type="button" onclick="goBack()">Go Back</button>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
 
