--- a/templates/dept_details.html
+++ b/templates/dept_details.html
@@ -5,17 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Department Details</title>
     <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #171717;
+            color: #fff;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+        h2 {
+            font-size: 36px;
+            margin-bottom: 20px;
+            color: #4CAF50; /* Green accent color */
+        }
         table {
             width: 100%;
             border-collapse: collapse;
+            margin-top: 20px;
         }
         th, td {
-            padding: 8px;
+            padding: 12px;
             text-align: left;
-            border-bottom: 1px solid #ddd;
+            border-bottom: 1px solid #4CAF50; /* Green accent color for table borders */
         }
         th {
-            background-color: #f2f2f2;
+            background-color: #343a40;
+            color: #fff;
+        }
+        tr:hover {
+            background-color: #4CAF50; /* Green accent color on hover */
+        }
+        .back {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 15px; /* Smaller padding */
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .back:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
@@ -41,8 +71,8 @@
             <td>{{ dept[5] }}</td>
         </tr>
         {% endfor %}
-    </table>
-    <button type="button" onclick="goBack()">Go Back</button>
+    </table><br><br>
+    <button type="button" class="back" onclick="goBack()">Go Back</button>
     <script>
         function goBack() {
             window.history.back();
