--- a/templates/download.html
+++ b/templates/download.html
@@ -5,24 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Downloads</title>
     <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #171717;
+            color: #fff;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+        h1 {
+            font-size: 36px;
+            margin-bottom: 20px;
+            color: #4CAF50; /* Green accent color */
+        }
         table {
             width: 100%;
             border-collapse: collapse;
+            margin-bottom: 20px;
         }
         th, td {
-            padding: 8px;
+            padding: 15px;
             text-align: left;
-            border-bottom: 1px solid #ddd;
+            border-bottom: 1px solid #555;
+            color: #ddd;
         }
         th {
-            background-color: #f2f2f2;
+            background-color: #4CAF50;
         }
         tr:hover {
-            background-color: #f5f5f5;
+            background-color: #333;
         }
         .add-review-form {
             display: flex;
             flex-direction: column;
+            color: #ddd;
         }
         .add-review-form label {
             margin-bottom: 5px;
@@ -31,9 +47,30 @@
         .add-review-form textarea,
         .add-review-form input[type="submit"] {
             margin-bottom: 10px;
+            padding: 10px;
+        }
+        .add-review-form input[type="submit"] {
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .add-review-form input[type="submit"]:hover {
+            background-color: #45a049;
         }
         .go-back-btn {
-            margin-top: 20px;
+            padding: 10px;
+            background-color: #555;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .go-back-btn:hover {
+            background-color: #333;
         }
     </style>
 </head>
@@ -52,7 +89,7 @@
         <tr>
             <td>{{ game[0] }}</td>
             <td>{{ game[1] }}</td>
-            <td>{{ game[3] }}</td> <!-- Added column for Branch -->
+            <td>{{ game[3] }}</td>
             <td><a href="{{ game[2] }}" target="_blank">Download</a></td>
             <td>
                 <form class="add-review-form" action="/add_review" method="POST">
@@ -81,7 +118,7 @@
     <script>
         // Function to go back to the previous page
         function goBack() {
-            window.history.back();
+            window.location.href= '/user?user_data={{user_data}}';
         }
 
         // Check if the URL contains a success parameter indicating review addition
@@ -90,6 +127,9 @@
         // If success parameter is present, show an alert
         if (success === 'true') {
             alert('Your review was added successfully!');
+        }
+        if (success === 'false') {
+            alert('Review already exists!')
         }
     </script>
 </body>
