--- a/templates/manager.html
+++ b/templates/manager.html
@@ -4,23 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manager Page</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(100deg, #1b1b1b 0%, #2b2d3c 100%);
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
+
+        h2 {
+            text-align: center;
+            padding: 20px;
+            font-size: 36px;
+            color: #4CAF50; /* Green accent color */
+        }
+
+        /* Left side menu */
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 20px 0;
+            text-align: center;
+        }
+
+        li {
+            margin-bottom: 15px;
+        }
+
+        a {
+            text-decoration: none;
+            color: #ddd;
+            font-size: 20px;
+            transition: color 0.3s ease;
+            display: block;
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+        a:hover {
+            color: #4CAF50;
+            border-bottom: 1px solid #4CAF50 /* Light green background on hover */
+        }
+    </style>
 </head>
 <body>
+    <h2>Welocme, {{name[0]}}!</h2>
+    <!-- Left side menu -->
+    <ul>
+        <li><a href="/profile_emp?user={{user_data}}">Profile</a></li>
+        <li><a href="/employees_managed?user={{user_data}}">Employees Managed</a></li>
+        <li><a href="/dept_details?user={{user_data}}">Dept Details</a></li>
+        <li><a href="/sql_command">SQL Prompter</a></li>
+        <li><a href="/login">Logout</a></li>
+    </ul>
+    <!-- Content area -->
     <div>
-        <h2>Manager Page</h2>
-        <!-- Left side menu -->
-        <div style="float: left; width: 20%;">
-            <ul>
-                <li><a href="/profile_emp?user={{user_data}}">Profile</a></li>
-                <li><a href="/employees_managed?user={{user_data}}">Employees Managed</a></li>
-                <li><a href="/dept_details?user={{user_data}}">Dept Details</a></li>
-                <li><a href="/sql_command">SQL Prompter</a> </li>
-            </ul>
-        </div>
-        <!-- Content area -->
-        <div style="float: left; width: 80%;">
-            <!-- Content for the manager page -->
-        </div>
+        <!-- Content for the manager page -->
     </div>
 </body>
 </html>
