--- a/templates/profile_usr.html
+++ b/templates/profile_usr.html
@@ -4,13 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Page</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(180deg, #171717 0%, #1f1f1f 100%);
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+        }
+
+        h2 {
+            text-align: center;
+            font-size: 36px;
+            color: #4CAF50; /* Green accent color */
+            margin-bottom: 20px;
+        }
+
+        .profile-container {
+            padding: 20px;
+            background-color: #333;
+            border-radius: 10px;
+            margin: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            width: 500px;
+            text-align: left;
+        }
+
+        .profile-info {
+            margin-bottom: 15px;
+            font-size: 18px;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            padding: 18px;
+            border-bottom: 3px solid #ddd;
+            text-align: left;
+        }
+
+        th {
+            background-color: #4CAF50;
+            color: white;
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            margin-top: 20px;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
-    <div>
-        <h2>Profile</h2>
-        <p>Name: {{ user_data[1] }}</p>
-        <p>Date Joined: {{ user_data[3] }}</p>
-        <p>Email: {{ user_data[4] }}</p>
+    <h2>Profile</h2>
+    <div class="profile-container">
+        <table>
+
+            <tr>
+                <td>Name</td>
+                <td>{{ user_data[1] }}</td>
+            </tr>
+            <tr>
+                <td>Date Joined</td>
+                <td>{{ user_data[3] }}</td>
+            </tr>
+            <tr>
+                <td>Email</td>
+                <td>{{ user_data[4] }}</td>
+            </tr>
+        </table>
     </div>
     <button type="button" onclick="goBack()">Go Back</button>
     <script>
