FetchAll Problem Fix

--- a/templates/manager.html
+++ b/templates/manager.html
@@ -54,7 +54,7 @@
     </style>
 </head>
 <body>
-    <h2>Welocme, {{name[0]}}!</h2>
+    <h2>Welcome, {{name[0]}}!</h2>
     <!-- Left side menu -->
     <ul>
         <li><a href="/profile_emp?user={{user_data}}">Profile</a></li>
