--- a/templates/add_project.html
+++ b/templates/add_project.html
@@ -99,7 +99,7 @@
         <label for="start_date">Start Date:</label>
         <input type="date" id="start_date" name="start_date" required>
 
-        <label for="durn">End Date:</label>
+        <label for="durn">Duration:</label>
         <input type="text" id="durn" name="durn" required>
 
         <input type="hidden" name="emp_id" value="{{ emp_id }}"> <!-- Assuming user_data is passed to the template -->
