--- a/templates/login.html
+++ b/templates/login.html
@@ -27,8 +27,8 @@
             margin: auto; /* Center the login box horizontally */
         }
         .background-image {
-            background: url('static/images/login_bg.gif') center/cover fixed no-repeat;
-            filter: blur(10px);
+            background: url('../static/images/login_bg.gif') center/cover fixed no-repeat;
+            filter: blur(4px);
             height: 100%;
             width: 100%;
             position: fixed;
@@ -40,7 +40,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+            background-color: rgba(0, 0, 0, 0.2); /* Adjust the opacity as needed */
         }
         div {
             background-color: rgba(52, 58, 64, 0.8);;
