--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,10 +17,10 @@
             height: 97vh;
         }
         .background-image {
-            background: url('/static/images/signup.gif') center/cover fixed no-repeat;
-            filter: blur(4px);
+            background: url('/static/images/signup.gif') center/cover no-repeat;
+            filter: blur(7px);
             height: 100%;
-            width: 100%;
+            width: 130%;
             position: fixed;
             z-index: -1;
         }
